@@ -12,7 +12,7 @@ Designed for minimal resource footprint, edge Linux, and embedded microcontrolle
 ### Key Features
 
 - **Pure C11 Core Engine**: No Python or heavy runtime dependencies. Engineered with single-responsibility modular architecture for portability to embedded and edge Linux devices (`libndwk.a`, `libndwk.so`).
-- **Multi-Language SDK**: First-class, zero-dependency bindings for **C# (.NET 10)** and **Rust** with idiomatic, type-safe APIs.
+- **Multi-Language SDK**: First-class, zero-external-dependency bindings for **C# (.NET 10)**, **Rust (2024)**, **Go (1.26)**, and **Java (OpenJDK 22+ Panama FFM)** with idiomatic, type-safe APIs.
 - **Low Memory Footprint**: Bounded resident RAM usage (~174MB). Zero dynamic memory allocation (`malloc=0`) in real-time streaming loops.
 - **Live Microphone Input**: Real-time microphone capture across Linux, WSL2, and Windows via single-header `miniaudio`.
 - **Zero-Delay Streaming**: Monotonic clock drift compensation ensures exact real-time playback synchronization, printing instant partial drafts via terminal in-place overwrite.
@@ -33,6 +33,8 @@ Designed for minimal resource footprint, edge Linux, and embedded microcontrolle
 - **Supported Platforms**: Linux (x86_64, aarch64), WSL2 (Ubuntu 20.04+), Windows 10/11, macOS
 - *(Optional)* **.NET 10 SDK**: For C# bindings
 - *(Optional)* **Rust / Cargo**: For Rust bindings
+- *(Optional)* **Go 1.18+**: For Go bindings
+- *(Optional)* **OpenJDK 22+**: For Java (Panama FFM) bindings
 
 ### Quick Start
 
@@ -108,35 +110,54 @@ Input files must be 16kHz, 16-bit mono PCM WAV:
 
 #### Language Bindings (SDK)
 
-ndwk can be integrated into high-level languages with zero external dependencies via its clean C-ABI:
+`ndwk` can be integrated into high-level languages with zero external dependencies via its clean C-ABI:
 
 **C# (.NET 10 / Unity):**
 ```bash
-dotnet run --project bindings/csharp/Ndwk.Sample/Ndwk.Sample.csproj test/ja/ja_033.wav models
+dotnet run --project bindings/csharp/Ndwk.Sample test/ja/ja_033.wav models
 ```
 
-**Rust:**
+**Rust (2024):**
 ```bash
 cargo run --manifest-path bindings/rust/Cargo.toml -- test/ja/ja_033.wav models
+```
+
+**Go (1.26):**
+```bash
+cd bindings/go && go run cmd/sample/main.go ../../test/ja/ja_033.wav ../../models
+```
+
+**Java (OpenJDK 22+ Panama FFM):**
+```bash
+javac -d bindings/java/bin bindings/java/src/ndwk/*.java
+java --enable-native-access=ALL-UNNAMED -cp bindings/java/bin ndwk.Sample test/ja/ja_033.wav models
 ```
 
 ### Architecture
 
 ```text
-[ main.c ] (CLI)      [ C# (.NET 10) ]      [ Rust ]
-    |                        |                 |
-    +------------------------+-----------------+
-                             | (C-ABI: Inc/ndwk.h)
-                             v
-                    [ libndwk.so / .a ]
-                             |
-         +-------------------+-------------------+
-         |                   |                   |
-   [ vad_detector ]    [ asr_engine ]     [ punct_engine ]
-    (Silero VAD)       (Zipformer/etc)     (Rule+CharLM)
-         |                   |
-   [ audio_history ]   [ model_config ]
+[ main.c ] (CLI)   [ C# (.NET 10) ]   [ Rust (2024) ]   [ Go (1.26) ]   [ Java (FFM) ]
+    |                     |                  |                 |               |
+    +---------------------+------------------+-----------------+---------------+
+                                             | (C-ABI: Inc/ndwk.h)
+                                             v
+                                    [ libndwk.so / .a ]
+                                             |
+                         +-------------------+-------------------+
+                         |                   |                   |
+                   [ vad_detector ]    [ asr_engine ]     [ punct_engine ]
+                    (Silero VAD)       (Zipformer/etc)     (Rule+CharLM)
+                         |                   |
+                   [ audio_history ]   [ model_config ]
 ```
+
+### Technical Guides & Deep Dives
+
+Detailed technical architecture and FFI design documents for each language:
+- [C# (.NET 10) Binding Guide](tmp/CSHARP_GUIDE.md)
+- [Rust (2024) Binding Guide](tmp/RUST_GUIDE.md)
+- [Go (cgo) Binding Guide](tmp/GO_GUIDE.md)
+- [Java (Panama FFM) Binding Guide](tmp/JAVA_GUIDE.md)
 
 ### Credits & Acknowledgments
 
@@ -154,10 +175,14 @@ cargo run --manifest-path bindings/rust/Cargo.toml -- test/ja/ja_033.wav models
 ### 主な特徴
 
 - **純C11コアエンジン**: Python等の重量なランタイムに依存せず、C11 + CMake + Ninja で構築。組み込みLinuxやマイコン環境への移植を考慮したコアライブラリ（`libndwk.a`, `libndwk.so`）構成。
-- **多言語SDK対応**: 外部依存ゼロ（0 dependencies）の **C# (.NET 10)** および **Rust** 公式バインディングを同梱。
+- **多言語SDK対応**: 外部依存ゼロ（0 dependencies）の公式バインディングを同梱：
+  - **C# (.NET 10)**: P/Invoke + `NativeLibrary` リゾルバ
+  - **Rust (2024)**: ゼロコスト C-ABI + トランポリンクロージャ
+  - **Go (1.26)**: `cgo` + `cgo.Handle`（完全ポインタ安全・`go vet` 準拠）
+  - **Java (OpenJDK 22+)**: Project Panama FFM API（ゼロ JNI・オフヒープメモリ安全）
 - **超低メモリ消費**: 常駐メモリは約174MB。リアルタイム推論ループ内での不要な動的メモリ確保（`malloc=0`）を徹底排除。
 - **ライブマイク入力**: `miniaudio` を採用し、Linux / WSL2 / Windows においてクロスプラットフォームでリアルタイム録音に対応。
-- **ゼロ遅延ストリーミング**: 単調増加クロック（CLOCK_MONOTONIC）による実時間ドリフト補正を行い、端末行上書きによるリアルタイム速報字幕（Partial）表示を実現。
+- **ゼロ遅延ストリーミング**: 単調増加クロック（`CLOCK_MONOTONIC`）による実時間ドリフト補正を行い、端末行上書きによるリアルタイム速報字幕（Partial）表示を実現。
 - **自動句読点復元**: 日本語音声認識に特化した軽量句読点復元エンジンを内蔵し、「、」「。」「？」をリアルタイム自動付与。
 - **頭切れ防止（プリロール機能）**: 直近10秒のスライディングバッファを備え、VAD検知直前の実音声（最大1.0秒）を自動結合して発話語頭の母音欠落を完全に防止。
 - **多言語ハイブリッドルーティング**:
@@ -175,6 +200,8 @@ cargo run --manifest-path bindings/rust/Cargo.toml -- test/ja/ja_033.wav models
 - **対応OS**: Linux (x86_64, aarch64), WSL2 (Ubuntu 20.04+), Windows 10/11, macOS
 - *(任意)* **.NET 10 SDK**: C# バインディング用
 - *(任意)* **Rust / Cargo**: Rust バインディング用
+- *(任意)* **Go 1.18+**: Go バインディング用
+- *(任意)* **OpenJDK 22+**: Java (Panama FFM) バインディング用
 
 ### クイックスタート
 
@@ -251,16 +278,27 @@ PULSE_SERVER=unix:/mnt/wslg/runtime-dir/pulse/native ./build/ndwk --mic
 
 #### 言語バインディング (SDK)
 
-C言語で提供される `ndwk.h` / `libndwk.so` を通じて、他言語から外部ライブラリ依存ゼロで組み込み可能です。
+C言語で提供される `ndwk.h` / `libndwk.so` を通じて、他言語から外部ライブラリ依存ゼロ（0 dependencies）で組み込み可能です。
 
 **C# (.NET 10 / Unity):**
 ```bash
-dotnet run --project bindings/csharp/Ndwk.Sample/Ndwk.Sample.csproj test/ja/ja_033.wav models
+dotnet run --project bindings/csharp/Ndwk.Sample test/ja/ja_033.wav models
 ```
 
-**Rust:**
+**Rust (2024):**
 ```bash
 cargo run --manifest-path bindings/rust/Cargo.toml -- test/ja/ja_033.wav models
+```
+
+**Go (1.26):**
+```bash
+cd bindings/go && go run cmd/sample/main.go ../../test/ja/ja_033.wav ../../models
+```
+
+**Java (OpenJDK 22+ Panama FFM):**
+```bash
+javac -d bindings/java/bin bindings/java/src/ndwk/*.java
+java --enable-native-access=ALL-UNNAMED -cp bindings/java/bin ndwk.Sample test/ja/ja_033.wav models
 ```
 
 ### アーキテクチャ構成
@@ -268,20 +306,28 @@ cargo run --manifest-path bindings/rust/Cargo.toml -- test/ja/ja_033.wav models
 クリーンアーキテクチャの原則に基づき、コアエンジンとインターフェースが完全に分離されています:
 
 ```text
-[ main.c ] (CLI)      [ C# (.NET 10) ]      [ Rust ]
-    |                        |                 |
-    +------------------------+-----------------+
-                             | (C-ABI: Inc/ndwk.h)
-                             v
-                    [ libndwk.so / .a ]
-                             |
-         +-------------------+-------------------+
-         |                   |                   |
-   [ vad_detector ]    [ asr_engine ]     [ punct_engine ]
-    (Silero VAD)       (Zipformer/etc)     (Rule+CharLM)
-         |                   |
-   [ audio_history ]   [ model_config ]
+[ main.c ] (CLI)   [ C# (.NET 10) ]   [ Rust (2024) ]   [ Go (1.26) ]   [ Java (FFM) ]
+    |                     |                  |                 |               |
+    +---------------------+------------------+-----------------+---------------+
+                                             | (C-ABI: Inc/ndwk.h)
+                                             v
+                                    [ libndwk.so / .a ]
+                                             |
+                         +-------------------+-------------------+
+                         |                   |                   |
+                   [ vad_detector ]    [ asr_engine ]     [ punct_engine ]
+                    (Silero VAD)       (Zipformer/etc)     (Rule+CharLM)
+                         |                   |
+                   [ audio_history ]   [ model_config ]
 ```
+
+### 各言語バインディング技術解説ドキュメント
+
+各言語における FFI 実装パターン、メモリ管理、落とし穴の完全技術レポートです：
+- [C# (.NET 10) バインディング徹底解説](tmp/CSHARP_GUIDE.md)
+- [Rust (2024) バインディング徹底解説](tmp/RUST_GUIDE.md)
+- [Go (cgo) バインディング徹底解説](tmp/GO_GUIDE.md)
+- [Java (Panama FFM) バインディング徹底解説](tmp/JAVA_GUIDE.md)
 
 ### ディレクトリ構成
 
@@ -303,16 +349,18 @@ ndwk/
 │   ├── model_config.h    # モデル設定
 │   └── punct_engine.h    # 句読点復元エンジン
 ├── Src/                  # 実装コード (ndwk.c, main.c, ...)
-├── bindings/             # 多言語バインディング
+├── bindings/             # 多言語バインディング (0 dependencies)
 │   ├── csharp/           # C# (.NET 10) P/Invoke バインディング
-│   └── rust/             # Rust ゼロコスト FFI バインディング
+│   ├── rust/             # Rust ゼロコスト FFI バインディング
+│   ├── go/               # Go cgo + cgo.Handle バインディング
+│   └── java/             # Java Panama FFM (Zero-JNI) バインディング
 ├── Lib/                  # サードパーティライブラリ (setup スクリプトで配置)
 ├── models/               # ONNX モデル (setup スクリプトで配置)
 ├── test/                 # テスト用音声ファイル
-└── tmp/                  # 技術解説ドキュメント
+└── tmp/                  # 技術解説ドキュメント (CSHARP, RUST, GO, JAVA)
 ```
 
 ### ライセンス
 
 本リポジトリのソースコードは [Apache-2.0 License](LICENSE) の下で公開されています。  
-各学習済みモデルおよびサードパーティライブラリのライセンスはそれぞれの配布元に従います。\n
+各学習済みモデルおよびサードパーティライブラリのライセンスはそれぞれの配布元に従います。
